...
                                                  .fromSTEB(
                                                      0.0, 0.0, 0.0, 16.0),
                                              child: Container(
                                                width: double.infinity,
                                                child: TextFormField(
                                                  key: ValueKey(
                                                      'emailAddress_2e33'),
                                                  controller: _model
                                                      .emailAddressTextController,
                                                  focusNode: _model
                                                      .emailAddressFocusNode,
                                                  autofocus: true,
                                                  autofillHints: [
...
                                                  .fromSTEB(
                                                      0.0, 0.0, 0.0, 16.0),
                                              child: Container(
                                                width: double.infinity,
                                                child: TextFormField(
                                                  key:
                                                      ValueKey('password_el3c'),
                                                  controller: _model
                                                      .passwordTextController,
                                                  focusNode:
                                                      _model.passwordFocusNode,
                                                  autofocus: true,
                                                  autofillHints: [
...
                                                builder: (context) => Padding(
                                                  padding: EdgeInsetsDirectional
                                                      .fromSTEB(
                                                          0.0, 0.0, 0.0, 16.0),
                                                  child: FFButtonWidget(
                                                    key:
                                                        ValueKey('Button_3f0u'),
                                                    onPressed: () async {
                                                      logFirebaseEvent(
                                                          'AUTHENTICATION_PAGE_SIGN_IN_BTN_ON_TAP');
                                                      Function() _navigate =
                                                          () {};
                                                      logFirebaseEvent(
...
                                                  .fromSTEB(
                                                      0.0, 0.0, 0.0, 16.0),
                                              child: Container(
                                                width: double.infinity,
                                                child: TextFormField(
                                                  key: ValueKey(
                                                      'emailAddress_Create_mkv3'),
                                                  controller: _model
                                                      .emailAddressCreateTextController,
                                                  focusNode: _model
                                                      .emailAddressCreateFocusNode,
                                                  autofocus: true,
                                                  autofillHints: [
...
                                                  .fromSTEB(
                                                      0.0, 0.0, 0.0, 16.0),
                                              child: Container(
                                                width: double.infinity,
                                                child: TextFormField(
                                                  key: ValueKey(
                                                      'password_Create_5asp'),
                                                  controller: _model
                                                      .passwordCreateTextController,
                                                  focusNode: _model
                                                      .passwordCreateFocusNode,
                                                  autofocus: true,
                                                  autofillHints: [
...
                                                  .fromSTEB(
                                                      0.0, 0.0, 0.0, 16.0),
                                              child: Container(
                                                width: double.infinity,
                                                child: TextFormField(
                                                  key: ValueKey(
                                                      'password_CreateConfirm_7qv7'),
                                                  controller: _model
                                                      .passwordCreateConfirmTextController,
                                                  focusNode: _model
                                                      .passwordCreateConfirmFocusNode,
                                                  autofocus: true,
                                                  autofillHints: [
...
                                                  0.0, 0.0),
                                              child: Padding(
                                                padding: EdgeInsetsDirectional
                                                    .fromSTEB(
                                                        0.0, 0.0, 0.0, 16.0),
                                                child: FFButtonWidget(
                                                  key: ValueKey('Button_7j5x'),
                                                  onPressed: () async {
                                                    logFirebaseEvent(
                                                        'AUTHENTICATION_GET_STARTED_BTN_ON_TAP');
                                                    logFirebaseEvent(
                                                        'Button_auth');
                                                    GoRouter.of(context)
...
                                buttonMargin: EdgeInsetsDirectional.fromSTEB(
                                    12.0, 0.0, 12.0, 0.0),
                                padding: EdgeInsetsDirectional.fromSTEB(
                                    16.0, 0.0, 16.0, 0.0),
                                tabs: [
                                  Tab(
                                    key: ValueKey('LogInTab_jgjo'),
                                    text: 'Log In',
                                  ),
                                  Tab(
                                    key: ValueKey('CreateAccountTab_ufk5'),
                                    text: 'Create Account',
                                  ),
                                ],
                                controller: _model.tabBarController,
                                onTap: (i) async {
                                  [() async {}, () async {}][i]();
...
