...
                  padding: EdgeInsetsDirectional.fromSTEB(0.0, 0.0, 0.0, 20.0),
                  child: Column(
                    mainAxisSize: MainAxisSize.max,
                    children: [
                      if (getRemoteConfigBool('PC_Text'))
                        Text(
                          key: ValueKey('Text_x4o7'),
                          'Add a Photo To Build Trust On Campus',
                          textAlign: TextAlign.center,
                          style: FlutterFlowTheme.of(context)
                              .bodyMedium
                              .override(
                                font: GoogleFonts.inter(
...
                ),
                Align(
                  alignment: AlignmentDirectional(0.0, 0.0),
                  child: Container(
                    width: double.infinity,
                    child: TextFormField(
                      key: ValueKey('Name_nzlv'),
                      controller: _model.nameTextController,
                      focusNode: _model.nameFocusNode,
                      autofocus: false,
                      enabled: true,
                      obscureText: false,
                      decoration: InputDecoration(
...
                  mainAxisSize: MainAxisSize.max,
                  children: [
                    Expanded(
                      child: Container(
                        width: double.infinity,
                        child: TextFormField(
                          key: ValueKey('Major_871k'),
                          controller: _model.majorTextController,
                          focusNode: _model.majorFocusNode,
                          autofocus: false,
                          enabled: true,
                          obscureText: false,
                          decoration: InputDecoration(
...
                          validator: _model.majorTextControllerValidator
                              .asValidator(context),
                        ),
                      ),
                    ),
                    FlutterFlowDropDown<String>(
                      key: ValueKey('Year_zb7l'),
                      controller: _model.yearValueController ??=
                          FormFieldController<String>(null),
                      options: [
                        'Freshman',
                        'Sophomore',
                        'Junior',
...
                    ),
                  ].divide(SizedBox(width: 10.0)),
                ),
                Container(
                  width: double.infinity,
                  child: TextFormField(
                    key: ValueKey('Bio_6153'),
                    controller: _model.bioTextController,
                    focusNode: _model.bioFocusNode,
                    autofocus: false,
                    enabled: true,
                    obscureText: false,
                    decoration: InputDecoration(
                      isDense: true,
                      labelText: 'Bio (optional)',
                      labelStyle:
                          FlutterFlowTheme.of(context).bodyMedium.override(
                                font: GoogleFonts.inter(
                                  fontWeight: FlutterFlowTheme.of(context)
                                      .bodyMedium
                                      .fontWeight,
...
                        ),
                      ),
                    ),
                  ),
                ),
                FFButtonWidget(
                  key: ValueKey('CreateProfileButton_b5y8'),
                  onPressed: () async {
                    logFirebaseEvent(
                        'PROFILE_CREATION_CreateProfileButton_ON_');
                    logFirebaseEvent('CreateProfileButton_backend_call');

                    await currentUserReference!.update(createUsersRecordData(
...
