...
                        borderRadius: BorderRadius.circular(8.0),
                        disabledColor: Color(0x8000598C),
                        disabledTextColor: FlutterFlowTheme.of(context).accent4,
                      ),
                    ),
                    FFButtonWidget(
                      key: ValueKey('Delete Listing'),
                      onPressed: () async {
                        logFirebaseEvent(
                            'EDIT_LISTING_COMP_DeleteListing_ON_TAP');
                        logFirebaseEvent('DeleteListing_alert_dialog');
                        var confirmDialogResponse = await showDialog<bool>(
                              context: context,
...
                                  ),
                                ),
                              ),
                              Align(
                                alignment: AlignmentDirectional(-1.0, 0.0),
                                child: FlutterFlowDropDown<String>(
                                  key: ValueKey('Dropdown Details'),
                                  controller:
                                      _model.detailsDropDownValueController ??=
                                          FormFieldController<String>(null),
                                  optionsHasValueKeys: true,
                                  options: [
                                    'Product Title',
                                    'Product Description',
                                    'Product Price'
                                  ],
                                  onChanged: (val) async {
                                    safeSetState(() =>
                                        _model.detailsDropDownValue = val);
                                    logFirebaseEvent(
                                        'EDIT_LISTING_DetailsDropDown_ON_FORM_WID');
...
                                mainAxisAlignment: MainAxisAlignment.center,
                                children: [
                                  Expanded(
                                    child: Container(
                                      width: 200.0,
                                      child: TextFormField(
                                        key: ValueKey('Detail Input'),
                                        controller:
                                            _model.detailFieldTextController,
                                        focusNode: _model.detailFieldFocusNode,
                                        autofocus: false,
                                        enabled: true,
                                        obscureText: false,
...
                                            .detailFieldTextControllerValidator
                                            .asValidator(context),
                                      ),
                                    ),
                                  ),
                                  FlutterFlowIconButton(
                                    key: ValueKey('Change Detail'),
                                    borderRadius: 8.0,
                                    buttonSize: 40.0,
                                    fillColor:
                                        FlutterFlowTheme.of(context).primary,
                                    icon: Icon(
                                      Icons.arrow_forward,
...
