...
                    height: 200.0,
                    decoration: BoxDecoration(
                      color: FlutterFlowTheme.of(context).secondaryBackground,
                      borderRadius: BorderRadius.circular(12.0),
                    ),
                    child: Column(
                      key: ValueKey('Column_ch9f'),
                      mainAxisSize: MainAxisSize.max,
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        Stack(
                          children: [
                            if (_model.finalImageUrl == null ||
...
                    ),
                  ),
                ),
                Container(
                  width: 200.0,
                  child: TextFormField(
                    key: ValueKey('titleField_xbw5'),
                    controller: _model.titleFieldTextController,
                    focusNode: _model.titleFieldFocusNode,
                    autofocus: false,
                    enabled: true,
                    obscureText: false,
                    decoration: InputDecoration(
...
                  mainAxisSize: MainAxisSize.max,
                  children: [
                    Expanded(
                      child: Container(
                        width: 200.0,
                        child: TextFormField(
                          key: ValueKey('priceField_6dco'),
                          controller: _model.priceFieldTextController,
                          focusNode: _model.priceFieldFocusNode,
                          autofocus: false,
                          enabled: true,
                          obscureText: false,
                          decoration: InputDecoration(
...
                  mainAxisSize: MainAxisSize.max,
                  children: [
                    Expanded(
                      child: Container(
                        width: 200.0,
                        child: TextFormField(
                          key: ValueKey('descriptionField_y2at'),
                          controller: _model.descriptionFieldTextController,
                          focusNode: _model.descriptionFieldFocusNode,
                          autofocus: false,
                          enabled: true,
                          obscureText: false,
                          decoration: InputDecoration(
...
                            animationsMap['iconButtonOnPageLoadAnimation2']!),
                      ),
                    ),
                  ],
                ),
                FFButtonWidget(
                  key: ValueKey('PublishButton_fwwn'),
                  onPressed: () async {
                    logFirebaseEvent('SELL_PAGE_PAGE_PublishButton_ON_TAP');
                    logFirebaseEvent('PublishButton_upload_file_to_firebase');
                    {
                      safeSetState(
                          () => _model.isDataUploading_uploadDataLf9 = true);
...
